<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/search"
        android:showAsAction="always"
        android:title="@string/groceryoverview_menu_item_search"
        android:icon="@drawable/ic_menu_search"/>

    <item
        android:id="@+id/filter"
        android:showAsAction="always"
        android:title="@string/groceryoverview_menu_item_filter"
        android:icon="@drawable/ic_menu_filter"/>

    <item
        android:id="@+id/selectmode"
        android:showAsAction="always"
        android:title="@string/groceryoverview_menu_item_select"
        android:icon="@drawable/ic_menu_select" />
    
    <item
        android:id="@+id/refresh"
        android:showAsAction="always"
        android:icon="@drawable/ic_menu_refresh"
        android:title="@string/groceryoverview_menu_item_refresh" />

</menu>