<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >

	 <EditText
		android:id="@+id/cart_grocery_edit_name"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingTop="30dp"
		android:paddingBottom="30dp"
		android:inputType="textAutoCorrect"
		android:hint="@string/cart_grocery_edit_name"
		android:imeOptions="actionGo" >
	</EditText>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" >
		
		<Button
			android:id="@+id/negative_button"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/cart_add_negative_button" >
		</Button>
		
		<Button
			android:id="@+id/positive_button"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/cart_add_positive_button" >
		</Button>
	</LinearLayout>
	
</LinearLayout>