<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >
	
	<ImageButton
		android:id="@+id/voice_button"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1.0"
		android:background="@drawable/empty_background_selectable"
		android:src="@drawable/ic_cart_add_mic_button" >
	</ImageButton>
	
	<TextView
		android:id="@+id/voice_text"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingTop="10dp"
		android:paddingBottom="10dp"
		android:hint="@string/cart_add_voice_hint"
		android:gravity="center_horizontal" >
	</TextView>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:paddingBottom="20dp" >
		
		<Button
			android:id="@+id/negative_button"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/cart_add_negative_button" >
		</Button>
		
		<Button
			android:id="@+id/positive_button"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/cart_add_positive_button" >
		</Button>
	</LinearLayout>
</LinearLayout>