<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout android:orientation="horizontal"
        		  android:layout_width="match_parent"
        		  android:layout_height="wrap_content"
        		  android:background="#cccccc"
        		  android:fontFamily="sans-serif"
	        	  android:textStyle="normal"
	        	  android:textColor="#888888"
        		  >
	    <TextView 
	        android:id="@+id/search_title"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.75"
	        android:text="@string/search_results"
	        android:textSize="18sp"
	        android:padding="6dp"
	        />
	    <TextView 
	        android:id="@+id/search_num_results"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.25"
	        android:text="@string/search_results_num"
	        android:gravity="right|center"
	        android:layout_gravity="right|center"
	        android:textSize="18sp"
	        android:padding="6dp"
	        />
    </LinearLayout>
    
    
    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="2dp" />

    <TextView
        android:id="@android:id/empty"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/no_search_results"
        android:drawableLeft="@drawable/warning"
        android:drawablePadding="2dip"
        android:paddingLeft="28dip"
        android:paddingRight="24dip"
        android:singleLine="false"/>

</LinearLayout>